[package]
name = "sourcemapcache_debug"
version = "12.9.2-dd"
authors = ["Sentry <hello@sentry.io>"]
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
symbolic = { version = "12.9.2-dd", path = "../../symbolic", features = [
    "sourcemapcache",
] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
